# assembly_projection_mapping_teaching

./: CMakeLists.txt  LICENSE  README.md  package.xml
docs/: tests.txt
include/assembly_projection_mapping_teaching/: assembly_manager.h
launch/: assembly.launch  assembly_manager.launch  assembly_tfs.launch  gazebo.launch  object_recognition.launch  sensor_asus_xtion.launch  sensor_kinect2.launch  sensors.launch
media/images/: assembly_frame.xcf  assembly_text.xcf
media/images/assembly_steps/: step_10_inspection.xcf  step_1_materials.xcf  step_2_brush_holder.xcf  step_3_brushes.xcf  step_4_rear_bracket_and_yoke.xcf  step_5_front_bracket_clutch_and_shift_lever.xcf  step_6_gears.xcf  step_7_plunger_rubbers.xcf  step_8_magnetic_switch.xcf  step_9_bolts.xcf  steps.txt
media/images/borders/: border_neon.xcf  rectangular_border_neon.xcf
media/images/buttons/: last.xcf  next.xcf
media/images/numbers/: numbers.xcf
media/materials/: wireframe.material
media/models/assembly_teaching_user_interface/: model.config  model.sdf
media/models/calibration_pattern/: model.config  model.sdf
media/models/calibration_pattern/materials/scripts/: calibration_pattern.material
rosbags/: save_rosbag.launch
rviz/: assembly.rviz
src/: assembly_manager.cpp  assembly_manager_node.cpp
worlds/: assembly.world  calibration.world
yaml/: assembly.yaml
yaml/object_recognition/: configs.yaml  filters.yaml  initial_pose_estimation.yaml  pose_recovery.yaml  pose_tracking.yaml
