cmake_minimum_required(VERSION 2.8.3)
project(assembly_projection_mapping_teaching)


#######################################################################################################################
## packages
#######################################################################################################################

set(${PROJECT_NAME}_CATKIN_COMPONENTS
    rosconsole
    roscpp
    rostime
    std_msgs
    xmlrpcpp
)

find_package(catkin REQUIRED COMPONENTS ${${PROJECT_NAME}_CATKIN_COMPONENTS})



#######################################################################################################################
## catkin specific configuration
#######################################################################################################################

catkin_package(
    INCLUDE_DIRS
        include
    LIBRARIES
        assembly_manager
    CATKIN_DEPENDS
        ${${PROJECT_NAME}_CATKIN_COMPONENTS}
    DEPENDS
)



#######################################################################################################################
## build
#######################################################################################################################

#==============================================================================
# includes
#==============================================================================

include_directories(
    include
    ${catkin_INCLUDE_DIRS}
)


#==============================================================================
# libraries
#==============================================================================

add_library(assembly_manager
    src/assembly_manager.cpp
)


#==============================================================================
# executables
#==============================================================================

add_executable(assembly_manager_node
    src/assembly_manager_node.cpp
)


#==============================================================================
# library link
#==============================================================================

target_link_libraries(assembly_manager
    ${catkin_LIBRARIES}
)


#==============================================================================
# executables link
#==============================================================================

target_link_libraries(assembly_manager_node
    assembly_manager
    ${catkin_LIBRARIES}
)

